# thunder-subtitle

./: .gitignore  README.md  pyproject.toml
.github/workflows/: build-binaries.yml
src/thunder_subtitle_cli/: cli.py  client.py
subs/梦幻的城市，大雄乐园/: 01 - 第001话 梦幻的城市,大雄乐园.srt.srt
